data engineering added

--- a/_posts/2020-08-09-Docker.md
+++ b/_posts/2020-08-09-Docker.md
@@ -149,3 +149,140 @@ vs code support ptvsd
             }
         ]
     }
+
+## docker volume
+docker is based on Union File System (changes lives on docker layer, if container is deleted, changes are lost), docker volume can help persistent data storage, sharing data betwenn docker containers and seperation of data and container
+### init volume
+if no host path is given, default path is /var/lib/docker. the mount path will be created there 
+
+    #bind-mounts /tmp/data1 from the host on to docker /tmp/data2
+    docker run -itd --volume /tmp/data1:/tmp/data2 --name container-test ubuntu bash
+    #mount volume without specifying host path
+    docker run -v /some/dir
+    #mount volume using Dockerfile
+    VOLUME /tmp/data1
+
+### inspect volume
+    
+    #inspect setting of the volume
+    docker inspect --format='{{json .Mounts}}' container-test | python -m json.tool
+
+### data sharing 
+
+    docker run --name my_container -v /some/path ...
+    docker run --volumes-from my_container --name my_container2 ubuntu /bin/bash
+
+### data-only container
+data container does not need to be run to be accessable, so it does not take extra space
+    #there is already volume definition in postgres image 
+    docker run --name dbdata postgres echo "Data-only container for postgres"
+    #backup data in data container to tar
+    docker run --rm --volumes-from dbdata -v $(pwd):/backup debian tar cvf /backup/backup.tar /var/lib/postgresql/data
+
+### permission
+file changes after VOLUME command in Dockerfile do not change the Volume
+
+    #do change before VOLUME
+    FROM debian:wheezy
+    RUN useradd foo
+    RUN mkdir /data && touch /data/x
+    RUN chown -R foo:foo /data
+    VOLUME /data
+
+### delete volumes
+using docker rm without -v will not delete volume. 
+volume will be delete when no container is using it. bind-mounts volume refering to host folder will never be deleted
+    #to delete volume
+    docker rm -v
+    #or using --rm when doing docker run
+    docker run --rm
+
+## docker-compose
+docker-compose is a tool to define and run multi-docker application. Containers are defined in service tag in yaml file
+
+    #execuate docker-compose
+    docker-compose up
+    #run docker-compose in background
+    docker-compose up -d
+    #not using default docker-compose.yml file
+    docker-compose -f server.yml up -d
+
+### volume
+mount volume from host to container (HOST:CONTAINER) or（HOST:CONTAINER:ro) can rebuild images if change code is needed
+
+    volumes:
+        data-volume:
+          - ../src:/opt/src
+
+### build
+
+    image: webapp:tag
+    build:
+      context: ./dir
+      dockerfile: Dockerfile-alternate
+      args:
+        buildno: 1
+
+### command
+default command to run when docker starts
+
+    command: bundle exec thin -p 3000
+
+### links
+access service in other containers
+
+    web:
+        links:
+        - db
+        - db:database
+
+### external_links
+access service in containers outside docker-compose
+
+    external_links:
+        - redis_1
+        - project_db_1:mysql
+
+### expose
+expose port to linked service
+
+    expose:
+    - "3000"
+
+### ports
+expose container port to host
+
+    ports:
+    - "3000"
+    - "3000-3005"
+    - "8000:8000"
+    - "9090-9091:8080-8081"
+
+### restart
+restart policy if  error occurs
+
+    restart: "no"
+    restart: always
+    restart: on-failure
+    restart: unless-stopped
+
+### environment
+set environment variable, if no value (only key) is given, the value on host will be taken
+ 
+    environment:
+        RACK_ENV: development
+        SHOW: 'true'
+        SESSION_SECRET:
+
+### pid
+container and host can share pid space
+
+    pid: "host"
+
+### dns
+config dns server
+ 
+    dns: 8.8.8.8
+    dns:
+    - 8.8.8.8
+    - 9.9.9.9
