Airflow minor changes

--- a/_posts/2020-09-05-Airflow.md
+++ b/_posts/2020-09-05-Airflow.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      airflow
+title:      Airflow
 subtitle:   
 date:       2020-09-05
 author:     neverset
@@ -35,6 +35,7 @@ tasks in same DAG have dependency relationship
 ## configuration
 configuration is done with python script
 tasks in same configuration cannot communicate with each other
+
     # -*- coding: utf-8 -*-
     import airflow
     # Operators
@@ -106,6 +107,7 @@ owner of the task
 time to start the task  
 ### jinja template
 jinja provides a set of built-in parameters and macros for work flow definition
+
     templated_command = """
         {% for i in range(5) %}
             #usage of doule curly bracket
@@ -126,7 +128,9 @@ jinja provides a set of built-in parameters and macros for work flow definition
         dag=dag)
 ### dependency
 define dependency betwwen task using set_upstream and set_downstream.   
-it is also possible to define dependency with dag.set_dependency(task_id_1, task_id_2)
+it is also possible to define dependency with 
+    
+    dag.set_dependency(task_id_1, task_id_2)
     # This means that t2 will depend on t1
     # running successfully to run
     # It is equivalent to
@@ -155,6 +159,7 @@ it is also possible to define dependency with dag.set_dependency(task_id_1, task
 
 ### backfill
 reexecuate some operation in past time
+
     # optional, start a web server in debug mode in the background
     # airflow webserver --debug &
     # start your backfill on a date range
