--- a/_posts/2020-09-05-Sqlite.md
+++ b/_posts/2020-09-05-Sqlite.md
@@ -8,14 +8,17 @@ header-img: img/post-bg-kuaidi.jpg
 catalog: true
 tags:
     - python
+    - sqlite
 ---
 
 ## sqlite3 
 
     import sqlite3 as sl
     con = sl.connect('my-test.db')
-    #create table
+    #con = sl.connect(':memory:') # to create database in memory without local file
+### create table
     with con:
+    #cur = con.cursor() #or do following operation with cursor
         con.execute("""
             CREATE TABLE USER (
                 id INTEGER NOT NULL PRIMARYKEY AUTOINCREMENT,
@@ -32,12 +35,22 @@ tags:
     ]
     with con:
         con.executemany(sql, data)
-    #query
+### query data
     with con:
         data = con.execute("SELECT *FROM USER WHERE age <= 22")
         for row in data:
             print(row)
-## pandas
+
+### commit 
+
+    con.commit()
+
+### close
+
+    cur.close()
+    con.close()
+
+### using pandas to operate sql
 
     #insert to table
     df_skill = pd.DataFrame({
