--- a/_posts/2020-08-09-Docker.md
+++ b/_posts/2020-08-09-Docker.md
@@ -162,6 +162,10 @@ if no host path is given, default path is /var/lib/docker. the mount path will b
     #mount volume using Dockerfile
     VOLUME /tmp/data1
 
+### create volume
+
+    docker volume create portainer_data
+
 ### inspect volume
     
     #inspect setting of the volume
@@ -286,3 +290,11 @@ config dns server
     dns:
     - 8.8.8.8
     - 9.9.9.9
+## docker manager tool portainer.io
+### installation
+
+    sudo docker volume create portainer_data
+    sudo docker run -d -p 9000:9000 -v /var/run/docker.sock:/var/run/docker.sock -v portainer_data:/data portainer/portainer
+
+### url
+http://dockerIP:9000
