--- a/_posts/2020-10-31-Cortex.md
+++ b/_posts/2020-10-31-Cortex.md
@@ -1,12 +1,12 @@
 ---
 layout:     post
-title:      tensorflow RCNN
+title:      cortex
 subtitle:   
-date:       2020-09-13
+date:       2020-10-31
 author:     neverset
 header-img: img/post-bg-kuaidi.jpg
 catalog: true
 tags:
-    - python
+    - machine learning
 ---
 
