--- a/_posts/2020-09-06-Cuda.md
+++ b/_posts/2020-09-06-Cuda.md
@@ -257,3 +257,7 @@ user cases:
         # 4b) ...Write back to global memory,
         # transposing each element within the shared memory array.
         a_out[col, row] = tile[cuda.threadIdx.x, cuda.threadIdx.y]
+
+## python package for Cross-Vendor Graphics
+### Kompute
+frameworks for cross platform and cross vendor graphics card acculeration
