data tableau database

--- a/_posts/2020-11-07-Tableau.md
+++ b/_posts/2020-11-07-Tableau.md
@@ -17,8 +17,10 @@ tags:
     #connect jupyter environment with tableau
     pip install tabpy_client
 
-## sample
+## deployment ML model to tableau sample
+an interactive dashboard with optimal variables to predict the probability of fraud and late delivery
 
+    #after connecting tabpy server to Tableau, you can deploy ML model to tableau
     import tabpy_client
     from tabpy.tabpy_tools.client import Client
     client = tabpy_client.Client('http://localhost:9004/')
