--- a/_posts/2020-09-28-NLP.md
+++ b/_posts/2020-09-28-NLP.md
@@ -142,7 +142,68 @@ the results are well-separated to the models, makers, and general subgroups
     response = requests.request("GET", url, headers=headers)
     print(response.text)
 
-### tricks and tips
+### TextBlob
+it is text-processing interface, which is similar to python string
+
+    #install
+    pip install -U textblob
+    python -m textblob.download_corpora
+
+#### usage
+after wrapping string with TextBlob, you can easily access different text processing methods 
+
+    from textblob import TextBlob
+    blob = TextBlob(text)
+
+#### Word Tokenization
+splitting word with direct call of blob.words, return value is WordList type, which can be used as a Python list
+
+    blob.words
+
+#### Noun Phrase Extraction
+extract noun phrase from text with blob.noun_phrases
+
+    blob.noun_phrases
+
+#### Sentiment Analysis
+do sentiment analysis with blob.sentiment, return value is a sentiment object.  
+Polarity is in the range of (-1,1); if polarity is <0, the sentence is more negative than positive and vice verse. 
+Subjectivity is in the range of (0,1); if subjectivity <0.5, the sentence is more subjective than objective and vice versa
+
+    blob.sentiment
+
+#### Lemmatization
+wrap the word inside Word object
+
+    for word in blob.words:
+    w = Word(word.lower())
+    print(w.lemmatize('v'))
+
+#### Spelling Correction
+
+    #correct a sentence
+    blob.correct()
+    #correct word
+    from textblob import Word
+    Word('larnin').spellcheck()
+
+#### Word Frequencies
+
+    from newspaper import Article
+    url = 'https://towardsdatascience.com/how-to-learn-data-science-when-life-does-not-give-you-a-break-a26a6ea328fd'
+    article = Article(url)
+    article.download()
+    article.parse()
+    text = article.text
+    blob = TextBlob(text)
+    blob.word_counts['i']
+    #visualize frequency plot   
+    import plotly.express as px 
+    import pandas as pd 
+    frequency = pd.DataFrame.from_dict(blob.word_counts, orient='index', columns=['count'])
+    px.bar(frequency.sort_values(by='count', ascending=False)[:30])
+
+## tricks and tips
 ### cleaning text data
 
     # # In case of import errors
