visualization nlp and makefile

--- a/_posts/2020-09-28-NLP.md
+++ b/_posts/2020-09-28-NLP.md
@@ -113,6 +113,51 @@ it is able to capture both syntactic and semantic information solely from the av
 
 
 ## library
+### nltk(Natural Language Toolkit)
+
+#### Installation
+
+    !pip install nltk
+    nltk.download()
+
+#### Usage
+##### Tokenization
+
+    from nltk import word_tokenize, sent_tokenize
+    sent = "I will walk 500 miles and I would walk 500 more, just to be the man who walks a thousand miles to fall down at your door!"
+    print(word_tokenize(sent))
+    print(sent_tokenize(sent))
+
+##### Stop-words
+
+    from nltk.corpus import stopwords
+    stop_words = stopwords.words('english')
+    token = word_tokenize(sent)
+    cleaned_token = []
+    for word in token:
+        if word not in stop_words:
+            cleaned_token.append(word)
+    print("This is the unclean version:", token)
+    print("This is the cleaned version:", cleaned_token)
+
+##### Stemming
+There are other stemmers like SnowballStemmer and LancasterStemmer but PorterStemmer is sort of the simplest one
+
+    from nltk.stem import PorterStemmer
+    stemmer = PorterStemmer()
+    words = ['play', 'playing', 'plays', 'played',
+            'playfullness', 'playful']
+    stemmed = [stemmer.stem(word) for word in words]
+    print(stemmed)
+
+##### Tagging Parts of Speech (pos)
+takes in a list of tokenized words, and tags each of them with a corresponding Parts of Speech identifier into tuples
+
+    from nltk import pos_tag 
+    token = word_tokenize(sent) + word_tokenize(sent2)
+    tagged = pos_tag(cleaned_token)                 
+    print(tagged)
+
 ### StanfordNLP
 CoreNLP is a library supporting all NLP operations like stemming, lementing, tokenization, finding parts of speech, sentiment analysis. StanfordNLP is a python wrapper for CoreNLP.
 
