--- a/_posts/2020-11-07-Tableau.md
+++ b/_posts/2020-11-07-Tableau.md
@@ -10,14 +10,20 @@ tags:
     - data engineering
 ---
 
-## set up python environments
+## Installation and usage
+
+### set up python environments
 
     #connect python environment with tableau
     pip install tabpy
     #connect jupyter environment with tableau
     pip install tabpy_client
 
-## deployment ML model to tableau sample
+### run tabpy
+run following command: tabpy will start a python local server on port 9004.
+after connecting tableau with tabpy server, you can implement python script
+
+### deployment ML model to tableau sample
 an interactive dashboard with optimal variables to predict the probability of fraud and late delivery
 
     #after connecting tabpy server to Tableau, you can deploy ML model to tableau
