--- a/_posts/2020-09-05-Tornado.md
+++ b/_posts/2020-09-05-Tornado.md
@@ -28,45 +28,37 @@ business logic to handle request from client
 ### route
 map url to handler
 ### simple example
-    import json
-    import redis
+
     import tornado.ioloop
     import tornado.web
     
-    class FactorialService(object):  
+    
+    class FactorialService(object):
+    
         def __init__(self):
-            self.cache = redis.StrictRedis("localhost", 6379)
-            self.key = "factorials"
+            self.cache = {}
     
         def calc(self, n):
-            s = self.cache.hget(self.key, str(n))
-            if s:
-                return int(s), True
+            if n in self.cache:
+                return self.cache[n]
             s = 1
             for i in range(1, n):
                 s *= i
-            self.cache.hset(self.key, str(n), str(s))
-            return s, False
-     
-    class FactorialHandler(tornado.web.RequestHandler):  
-        service = FactorialService()
+            self.cache[n] = s
+            return s
     
+    
+    class FactorialHandler(tornado.web.RequestHandler):
+        service = FactorialService()
         def get(self):
-            n = int(self.get_argument("n") or 1)
-            fact, cached = self.service.calc(n)
-            result = {
-                "n": n,
-                "fact": fact,
-                "cached": cached
-            }
-            self.set_header("Content-Type", "application/json; charset=UTF-8")
-            self.write(json.dumps(result))
-     
+            n = int(self.get_argument("n"))
+            self.write(str(self.service.calc(n)))
+
     def make_app():
         return tornado.web.Application([
-            (r"/fact", FactorialHandler),
+            (r"/fact", FactorialHandler),  # 注册路由
         ])
- 
+    
     if __name__ == "__main__":
         app = make_app()
         app.listen(8888)
@@ -229,7 +221,10 @@ modul to implement functions such as request log, session management
 
 ## comparison 
 
-Flask: Meant for small, simple projects; makes it easy for us to construct views and connect them to routes quickly; can be encapsulated in a single file without much fuss
-Pyramid: Meant for projects that may grow; contains a fair bit of configuration to get up and running; separate realms of application components can easily be divided and built out to arbitrary depth without losing sight of the central application
-Tornado: Meant for projects benefiting from precise and deliberate I/O control; allows for co-routines and easily exposes methods that can control how requests are received/responses are sent and when those operations occur
+Flask: Meant for small, simple projects; makes it easy for us to construct views and connect them to routes quickly; can be encapsulated in a single file without much fuss 
+
+Pyramid: Meant for projects that may grow; contains a fair bit of configuration to get up and running; separate realms of application components can easily be divided and built out to arbitrary depth without losing sight of the central application 
+
+Tornado: Meant for projects benefiting from precise and deliberate I/O control; allows for co-routines and easily exposes methods that can control how requests are received/responses are sent and when those operations occur 
+
 Django: (As we'll see) meant for big things that may get bigger; large ecosystem of add-ons and mods; very opinionated in its configuration and management in order to keep all the disparate parts in line
