--- a/_posts/2020-09-05-Tornado.md
+++ b/_posts/2020-09-05-Tornado.md
@@ -9,10 +9,15 @@ catalog: true
 tags:
     - data engineering
 ---
-Tornado is a  web application framework with python based on MVC(Model-View-Controller) model. Tornado is specifically built to handle high parallel asynchronous processes. By using non-blocking network IO, it can easily handle tens of thousands of connections, which makes it ideal for long polling, WebSockets, and applications that need to maintain a connection for each user
+Tornado is a  lightweight web application framework with python based on MVC(Model-View-Controller) model. 
+Tornado is specifically built to handle high parallel asynchronous processes. By using non-blocking network IO, it can easily handle tens of thousands of connections, which makes it ideal for long polling, WebSockets, and applications that need to maintain a connection for each user
 ![](https://raw.githubusercontent.com/neverset123/cloudimg/master/202006291716909099.jpg)
 
 Tornado also implements the HTTP protocol client (AsyncHTTPClient) and server (HTTPServer), which can be used to initiate and receive HTTP requests
+
+user case:
+* high concurrency (such as ticket system)
+* large scale http persistent connections (using one TCP for multiple HTTP requests such as chat app)
 
 ## components
 one ioloop has multi apps , one app has one route , one route has multi handler.    
@@ -29,7 +34,9 @@ business logic to handle request from client
 map url to handler
 ### simple example
 
+    #core io loop module, it encapsulates linux epoll
     import tornado.ioloop
+    #basic web framework
     import tornado.web
     
     
@@ -47,21 +54,25 @@ map url to handler
             self.cache[n] = s
             return s
     
-    
+    #same as view class
     class FactorialHandler(tornado.web.RequestHandler):
         service = FactorialService()
+        #override default method
         def get(self):
             n = int(self.get_argument("n"))
+            #use write method to return value
             self.write(str(self.service.calc(n)))
 
     def make_app():
         return tornado.web.Application([
-            (r"/fact", FactorialHandler),  # 注册路由
+            (r"/fact", FactorialHandler),
         ])
     
     if __name__ == "__main__":
         app = make_app()
+        #use listen method to create a http server with specified port
         app.listen(8888)
+        #instanze an IOLoop in current thread und start ioloop
         tornado.ioloop.IOLoop.current().start()
 
 ## example in MVC
@@ -227,4 +238,4 @@ Pyramid: Meant for projects that may grow; contains a fair bit of configuration 
 
 Tornado: Meant for projects benefiting from precise and deliberate I/O control; allows for co-routines and easily exposes methods that can control how requests are received/responses are sent and when those operations occur 
 
-Django: (As we'll see) meant for big things that may get bigger; large ecosystem of add-ons and mods; very opinionated in its configuration and management in order to keep all the disparate parts in line
+Django: meant for big things that may get bigger; large ecosystem of add-ons and mods; very opinionated in its configuration and management in order to keep all the disparate parts in line; famous for its backend management systems, with ORM it can automatically generate database structure and backend with full functionality
