--- a/_posts/2020-09-05-Tornado.md
+++ b/_posts/2020-09-05-Tornado.md
@@ -75,6 +75,25 @@ map url to handler
         #instanze an IOLoop in current thread und start ioloop
         tornado.ioloop.IOLoop.current().start()
 
+## usage
+### tornado.option.define
+used to define option variables, the variable will be defined in config file or command line
+
+### tornado.options.options
+used to used the defined option variable in functions
+
+### tornado.opitions.parse_command_line
+parse command line paramenter into option variable
+
+### tornado.opitions.parse_config_file(path)
+import parameter from config into variable
+
+### tornado.options.options.logging
+activate or deactivate logging in console
+
+### get_query_argument
+get query parameter from router
+
 ## example in MVC
 Tornado's views are class-based,  the incoming HTTP request will be caught and assigned to be an attribute of our defined class
 ### view
