--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -21,9 +21,18 @@ There are four types for NoSQL database:
 
 ![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20201011172755.png)
 ### MongoDB
-document-oriented, use json like documents with optional schemas
+* document-oriented, use json like documents with optional schemas.
+* used for simpler, more unstructured data, great for app development
 
 ## SQL
+### Postgresql
+* traditional RDBMS (relational database management system) handling more complex procedures, designs, and integrations. Mainly used for relational data, it is object-oriented in nature
+* PostgreSQL scales vertically
 
 ## HarperDB
-distributed DB with restful API and dynamic schema that support SQL and NoSQL including joins
+* distributed DB with restful API and dynamic schema that support SQL and NoSQL including joins.
+* HarperDB is 37 times faster than Mongo at less than half the price. HarperDB also has a native REST API, supports SQL on JSON, and can be easier to use and manage
+* MongoDB and HarperDB are more distributed architectures, whereas PostgreSQL might be considered a monolithic architecture.
+* HarperDB uses a simple pub-sub model; data is replicated by publishing data to different “chat rooms” which different nodes subscribe to and are able to be distributed horizontally.
+* Both MongoDB and HarperDB scale horizontally
+* HarperDB is not recommended when you need full-text indexing, highly structured relational data, strict consistency across systems, or for projects where developers are not trusted to constrain and maintain data
