--- a/_posts/2020-11-07-Dask.md
+++ b/_posts/2020-11-07-Dask.md
@@ -103,3 +103,13 @@ Dask DataFrame is a logical connection of many Pandas DataFrames
     from math import sqrt
     from sklearn.metrics import mean_squared_error
     Model_rmse = sqrt(mean_squared_error(labels_test, predictions))
+
+## Dask-sql
+SQL query engine built on top of dask, a distributed computation framework written purely in Python and playing very well with the Python ecosystem. It allows you to use normal SQL, e.g. from your favorite BI tool, and query data living in the Python space
+
+    git clone https://github.com/nils-braun/dask-sql-k8s-deployment
+    cd dask-sql-k8s-deployment
+    helm dependency update dask-sql
+    helm upgrade --cleanup-on-fail --install dask-sql dask-sql
+    kubectl port-forward svc/hue 8888:8888
+    #use http://localhost:8888 to access Apache Hue
