--- a/_posts/2020-10-31-Cortex.md
+++ b/_posts/2020-10-31-Cortex.md
@@ -10,3 +10,4 @@ tags:
     - machine learning
 ---
 
+cortex helps automate all of our cloud infrastructure for inference by spinning up a Cortex cluster
