--- a/_posts/2020-11-14-Sk-Learn.md
+++ b/_posts/2020-11-14-Sk-Learn.md
@@ -120,3 +120,57 @@ tags:
         models.append(('svc', SVR()))
         models.append(('xgb', XGBRegressor(seed=seed)))
         return models
+
+## sklearn pipeline
+pipeline can be used to transform features for a machine learning model.
+
+    from sklearn.pipeline import Pipeline
+    from sklearn.impute import SimpleImputer
+    from sklearn.preprocessing import MinMaxScaler, OneHotEncoder
+
+    #num_transformer fills the missing values with the mean value of a column (SimpleImputer) and scales the values between 0 and 1 (MinMaxScaler)
+    num_transformer = Pipeline(
+        steps=
+        [
+            ('imputer', SimpleImputer(strategy='mean')),
+            ('scaler', MinMaxScaler())
+        ]
+    )
+
+    #cat_transformer fills the missing values with the most frequent value of a column and encode the categories using the OneHotEncoder
+    cat_transformer = Pipeline(
+        steps=
+        [
+            ('imputer', SimpleImputer(strategy='most_frequent')),
+            ('encode', OneHotEncoder(drop='first'))
+        ]
+    )
+
+    #create transformer object
+    num_ft = df.iloc[:,:-1]\
+    .select_dtypes(include=['int64', 'float64']).columns
+    cat_ft = df.iloc[:,:-1]\
+    .select_dtypes(include=['object']).columns
+    from sklearn.compose import ColumnTransformer
+    proprocess = ColumnTransformer(
+        transformers=[
+                        ('numeric', num_transformer, num_ft),
+                        ('categorical', cat_transformer, cat_ft)
+        ]
+    )
+    #combine tranformer object with machine learning model
+    from sklearn.linear_model import LogisticRegression
+    clf = Pipeline(
+        [
+            ('preprocess', preprocess),
+            ('model', LogisticRegression())
+        ]
+    )
+
+    # start training
+    from sklearn.model_selection import train_test_split
+    X = df.drop('target', axis=1)
+    y = df['target']
+    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)
+    clf.fit(X_train, y_train)
+    
