--- a/_posts/2020-09-05-FastAPI.md
+++ b/_posts/2020-09-05-FastAPI.md
@@ -486,8 +486,8 @@ run dependent method before the running method and get the return of dependent m
         response.update({"items": items})
         return response
 
-## Authority (OAuth2)
- 
+## Authority(OAuth2)
+
     from typing import Optional
     from fastapi import Depends, FastAPI
     from fastapi.security import OAuth2PasswordBearer, OAuth2PasswordRequestForm
@@ -566,6 +566,152 @@ run dependent method before the running method and get the return of dependent m
         if current_user.disabled:
             raise HTTPException(status_code=400, detail="inactive user")
         return current_user
+
+### Okta
+1) add .env file with following contents
+
+    //xxxx represents the client ID and client secret generated with your Okta account
+    OKTA_CLIENT_ID=xxxx
+    OKTA_CLIENT_SECRET=xxxx
+    OKTA_ISSUER="https://SOMETHING_HERE.oktapreview.com/oauth2/default"
+    OKTA_AUDIENCE="api://default"
+2) Retrieving an Access Token in FastAPI
+calling an external authentication endpoint like Okta requires a bit more custom code and since the documentation’s API call originates from the browser, further security considerations are needed.
+The easiest way to request an access token is to use the Python HTTPX library to call the Okta /token endpoint from your API.
+
+    #install httpx
+    pip install httpx
+    pip freeze > requirements.txt
+
+    #main.py
+    from fastapi import Depends, FastAPI, HTTPException, Request
+    from fastapi.security import OAuth2PasswordBearer
+    import httpx
+    from starlette.config import Config
+
+    # Load environment variables
+    config = Config('.env')
+    app = FastAPI()
+
+    # Define the auth scheme and access token URL
+    oauth2_scheme = OAuth2PasswordBearer(tokenUrl='token')
+
+    # Call the Okta API to get an access token
+    def retrieve_token(authorization, issuer, scope='items'):
+        headers = {
+            'accept': 'application/json',
+            'authorization': authorization,
+            'cache-control': 'no-cache',
+            'content-type': 'application/x-www-form-urlencoded'
+        }
+        data = {
+            'grant_type': 'client_credentials',
+            'scope': scope,
+        }
+        url = issuer + '/v1/token'
+
+        response = httpx.post(url, headers=headers, data=data)
+
+        if response.status_code == httpx.codes.OK:
+            return response.json()
+        else:
+            raise HTTPException(status_code=400, detail=response.text)
+
+
+    # Get auth token endpoint
+    @app.post('/token')
+    def login(request: Request):
+        return retrieve_token(
+            request.headers['authorization'],
+            config('OKTA_ISSUER'),
+            'items'
+        )
+
+3) Creating a Protected Endpoint
+
+    # Add these to your imports
+    from typing import List
+    from pydantic import BaseModel
+
+    ...
+
+    # Validate the token
+    def validate(token: str = Depends(oauth2_scheme)):
+        # TODO: Add token validation logic
+        return True
+
+
+    # Data model
+    class Item(BaseModel):
+        id: int
+        name: str
+
+
+    # Protected, get items route
+    @app.get('/items', response_model=List[Item])
+    def read_items(valid: bool = Depends(validate)):
+        return [
+            Item.parse_obj({'id': 1, 'name': 'red ball'}),
+            Item.parse_obj({'id': 2, 'name': 'blue square'}),
+            Item.parse_obj({'id': 3, 'name': 'purple ellipse'}),
+        ]
+
+4) Validating Access Tokens Remotely
+
+    def validate_remotely(token, issuer, clientId, clientSecret):
+        headers = {
+            'accept': 'application/json',
+            'cache-control': 'no-cache',
+            'content-type': 'application/x-www-form-urlencoded',
+        }
+        data = {
+            'client_id': clientId,
+            'client_secret': clientSecret,
+            'token': token,
+        }
+        url = issuer + '/v1/introspect'
+
+        response = httpx.post(url, headers=headers, data=data)
+
+        return response.status_code == httpx.codes.OK and response.json()['active']
+
+    def validate(token: str = Depends(oauth2_scheme)):
+        res = validate_remotely(
+            token,
+            config('OKTA_ISSUER'),
+            config('OKTA_CLIENT_ID'),
+            config('OKTA_CLIENT_SECRET')
+        )
+
+        if res:
+            return True
+        else:
+            raise HTTPException(status_code=400)
+
+5) validating access token locally
+access tokens are generally short-lived (an hour by default), you might prefer to validate the tokens locally
+
+    #pip install okta_jwt
+    #pip freeze > requirements.txt
+
+    ...
+    from okta_jwt.jwt import validate_token as validate_locally
+
+    ...
+
+    def validate(token: str = Depends(oauth2_scheme)):
+        try:
+            res = validate_locally(
+                token,
+                config('OKTA_ISSUER'),
+                config('OKTA_AUDIENCE'),
+                config('OKTA_CLIENT_ID')
+            )
+            return bool(res)
+        except Exception:
+            raise HTTPException(status_code=403)
+    ...
+
 
 ## Blueprint (route)
 use Include_route to register the children API router on the core application route
